# Astro_agent

./: .gitignore  EVALUATION.md  README.md  pyproject.toml  requirements.txt
backend/app/: agent.py  main.py  models.py  tools.py
backend/knowledge/: astrology_notes.md
eval/: golden_set.jsonl  run_eval.py
eval/results/: latest_scorecard.md  results_log.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
